# StatusServer

./: .editorconfig  .gitignore  AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Defer.h  LICENSE  MySqlDao.cpp  MySqlDao.h  MySqlMgr.cpp  MySqlMgr.h  PropertySheet.props  RedisConPool.cpp  RedisConPool.h  RedisManager.cpp  RedisManager.h  Singleton.h  StatusServer.cpp  StatusServer.sln  StatusServer.vcxproj  StatusServer.vcxproj.filters  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  global.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
